--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "typecheck": "tsc"
   },
   "dependencies": {
+    "@prisma/client": "^5.7.0",
     "@remix-run/css-bundle": "^2.3.1",
     "@remix-run/node": "^2.3.1",
     "@remix-run/react": "^2.3.1",
     "@remix-run/serve": "^2.3.1",
     "isbot": "^3.6.8",
+    "mongodb": "^6.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
@@ -24,6 +26,9 @@
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
     "eslint": "^8.38.0",
+    "install": "^0.13.0",
+    "prisma": "^5.7.0",
+    "tailwindcss": "^3.3.6",
     "typescript": "^5.1.6"
   },
   "engines": {
